# evm-io-tracker

./: .gitignore  .gitmodules  Cargo.toml  README.md  run.sh
src/: main.rs  opcode.rs  opts.rs  parse.rs
