[package]
name = "amt-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { path = "./ethers-rs" }
tiny-keccak = "2"
rand = "*"
tokio = { version = "1", features = ["full"] }
serde = "1"
postcard = { version = "1.0.2", features = ["use-std"] }